--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,9 @@ project(amaris_school)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/")
 
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+
 add_subdirectory(amaris)
 add_subdirectory(school)
+
+add_subdirectory(gtest)
