--- a/gtest/CMakeLists.txt
+++ b/gtest/CMakeLists.txt
@@ -10,7 +10,11 @@ FetchContent_MakeAvailable(googletest)
 
 # Now simply link against gtest or gtest_main as needed. Eg
 add_executable(test_amaris test_logger.cpp)
-target_link_libraries(test_amaris gtest_main)
+target_link_libraries(test_amaris gtest_main amaris)
+
+include_directories(../amaris/include)
+
+target_compile_features(test_amaris PUBLIC cxx_std_17)
 
 set_target_properties(test_amaris PROPERTIES FOLDER "test")
 set_target_properties(gtest PROPERTIES FOLDER "test/googletest")
