--- a/amaris/CMakeLists.txt
+++ b/amaris/CMakeLists.txt
@@ -1,15 +1,6 @@
-add_subdirectory(src)
-add_subdirectory(include)
+file(GLOB INCLUDES_LIST "include/*.h" )
+file(GLOB SOURCES_LIST "src/*.cpp" )
 
-foreach(file ${SOURCES})
-	set(file "src/${file}")
-	list(APPEND SOURCES_LIST ${file})
-endforeach()
-
-foreach(file ${INCLUDES})
-	set(file "include/${file}")
-	list(APPEND INCLUDES_LIST ${file})
-endforeach()
 
 include_directories(include)
 
