--- a/gtest/CMakeLists.txt
+++ b/gtest/CMakeLists.txt
@@ -9,7 +9,7 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
 # Now simply link against gtest or gtest_main as needed. Eg
-add_executable(test_amaris test_logger.cpp)
+add_executable(test_amaris test_loggerFile.cpp test_console.cpp)
 target_link_libraries(test_amaris gtest_main amaris)
 
 include_directories(../amaris/include)
@@ -17,7 +17,10 @@ include_directories(../amaris/include)
 target_compile_features(test_amaris PUBLIC cxx_std_17)
 
 set_target_properties(test_amaris PROPERTIES FOLDER "test")
+set_target_properties(test_amaris PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS "--gtest_filter=*.*")
+# Set filter-folder for gtest projects
 set_target_properties(gtest PROPERTIES FOLDER "test/googletest")
 set_target_properties(gtest_main PROPERTIES FOLDER "test/googletest")
 set_target_properties(gmock PROPERTIES FOLDER "test/googletest")
 set_target_properties(gmock_main PROPERTIES FOLDER "test/googletest")
+
