--- a/amaris/CMakeLists.txt
+++ b/amaris/CMakeLists.txt
@@ -6,5 +6,6 @@ include_directories(include)
 
 add_library(amaris SHARED ${SOURCES_LIST} ${INCLUDES_LIST})
 
+add_compile_definitions(AMARIS_EXPORT)
 
 target_compile_features(amaris PUBLIC cxx_std_17)
